# bytecoin

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  ReleaseNotes.md  ReleaseNotes.txt  azure-pipelines.yml  google
.github/workflows/: cmake.yml
docker/: docker-compose.yml  make-bcn.sh
docker/docker1/: Dockerfile-bcn
docker/docker1/src/: make-bcn-docker.sh
docs/: Armor-Node-Daemon-JSON-RPC-API.md  Armor-Wallet-Daemon-JSON-RPC-API.md  Bytecoin-Node-Daemon-JSON-RPC-API.md  Bytecoin-Wallet-Daemon-JSON-RPC-API.md
src/: CryptoNote.cpp  CryptoNote.hpp  CryptoNoteConfig.hpp  bytecoin.rc  byterub.rc  main_bytecoind.cpp  main_byterubd.cpp  main_fuzzer.cpp  main_miner.cpp  main_tests.cpp  main_walletd.cpp  rpc_api.cpp  rpc_api.hpp  version.hpp
src/Core/: Archive.cpp  Archive.hpp  BlockChain.cpp  BlockChain.hpp  BlockChainFileFormat.cpp  BlockChainFileFormat.hpp  BlockChainState.cpp  BlockChainState.hpp  Config.cpp  Config.hpp  CryptoNoteTools.cpp  CryptoNoteTools.hpp  Currency.cpp  Currency.hpp  Difficulty.cpp  Difficulty.hpp  DifficultyCheck.cpp  DifficultyCheck.hpp  Multicore.cpp  Multicore.hpp  MulticoreWallet.cpp  MulticoreWallet.hpp  Node.cpp  Node.hpp  NodeDownloader.cpp  NodeDownloaderV3.cpp  NodeLegacyAPI.cpp  Node_P2PProtocolBytecoin.cpp  Node_P2PProtocolBytecoinNew.cpp  TransactionBuilder.cpp  TransactionBuilder.hpp  TransactionExtra.cpp  TransactionExtra.hpp  Wallet.cpp  Wallet.hpp  WalletHD.cpp  WalletHD.hpp  WalletHDsqlite.cpp  WalletHDsqlite.hpp  WalletLegacy.cpp  (+17 more)
src/Core/hardware/: Emulator.cpp  Emulator.hpp  HardwareWallet.cpp  HardwareWallet.hpp  Ledger.cpp  Ledger.hpp  Proxy.cpp  Proxy.hpp  Trezor.cpp  Trezor.hpp
src/Core/hw/: HardwareWallet.cpp  (+1 more)
src/Miner/: MiningConfig.cpp  MiningConfig.hpp
src/common/: BIPs.cpp  BIPs.hpp  Base58.cpp  Base58.hpp  Base64.cpp  Base64.hpp  BinaryArray.cpp  BinaryArray.hpp  CRC32.cpp  CRC32.hpp  CRC32_generate.py  CommandLine.cpp  CommandLine.hpp  ConsoleTools.cpp  ConsoleTools.hpp  Int128.cpp  Int128.hpp  Invariant.cpp  Invariant.hpp  Ipv4Address.cpp  Ipv4Address.hpp  JsonValue.cpp  JsonValue.hpp  Math.hpp  MemoryStreams.cpp  MemoryStreams.hpp  Nocopy.hpp  ScopeExit.hpp  Streams.cpp  Streams.hpp  StringTools.cpp  StringTools.hpp  StringView.cpp  StringView.hpp  Varint.cpp  Varint.hpp  Words.cpp  Words.hpp  Words_generate.py  exception.cpp  (+2 more)
src/crypto/: aesb.h  c_types.h  chacha.cpp  chacha.hpp  chacha8.c  chacha8.h  chacha8.hpp  crypto-ops-data.c  crypto-ops-data.h  crypto-ops.c  crypto-ops.h  crypto-util.c  crypto-util.h  crypto.cpp  crypto.hpp  crypto_helpers.hpp  generic-ops.hpp  groestl.h  groestl_tables.h  hash-blake.c  hash-ctx.cpp  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-groestl.c  hash-impl.h  hash-jh.c  hash-keccak.c  hash-ops.h  hash-skein.c  hash.c  hash.cpp  hash.h  hash.hpp  initializer.h  int-util.h  jh.c  keccak.c  keccak.h  (+13 more)
src/http/: Agent.cpp  Agent.hpp  BinaryRpc.hpp  Client.cpp  Client.hpp  JsonRpc.cpp  JsonRpc.h  JsonRpc.hpp  RequestParser.cpp  RequestParser.hpp  ResponseParser.cpp  ResponseParser.hpp  Server.cpp  Server.hpp  types.cpp  types.hpp
src/logging/: CommonLogger.cpp  CommonLogger.hpp  ConsoleLogger.cpp  ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  ILogger.cpp  ILogger.hpp  LoggerGroup.cpp  LoggerGroup.hpp  LoggerManager.cpp  LoggerManager.hpp  LoggerMessage.cpp  LoggerMessage.hpp
src/p2p/: CryptoNoteProtocolDefinitions.hpp  LevinProtocol.cpp  LevinProtocol.hpp  P2P.cpp  P2P.hpp  P2PClientBasic.cpp  P2PClientBasic.hpp  P2PClientNew.cpp  P2PClientNew.hpp  P2PProtocolBasic.cpp  P2PProtocolBasic.hpp  P2pProtocolDefinitions.hpp  P2pProtocolNew.cpp  P2pProtocolNew.hpp  P2pProtocolTypes.hpp  P2pSeria.cpp  PeerDB.cpp  PeerDB.hpp
src/platform/: DB.cpp  DB.hpp  DBlmdb.cpp  DBlmdb.hpp  DBmemory.cpp  DBmemory.hpp  DBsqlite3.cpp  DBsqlite3.hpp  ExclusiveLock.cpp  ExclusiveLock.hpp  Files.cpp  Files.hpp  IndexDB.cpp  IndexDB.hpp  Ledger.cpp  Ledger.hpp  Network.cpp  Network.hpp  PathTools.cpp  PathTools.hpp  PathTools.mm  PreventSleep.cpp  PreventSleep.hpp  Time.cpp  Time.hpp  Windows.hpp
src/seria/: BinaryInputStream.cpp  BinaryInputStream.hpp  BinaryOutputStream.cpp  BinaryOutputStream.hpp  ISeria.hpp  JsonInputStream.cpp  JsonInputStream.hpp  JsonInputValue.cpp  JsonInputValue.hpp  JsonOutputStream.cpp  JsonOutputStream.hpp  KVBinaryCommon.hpp  KVBinaryInputStream.cpp  KVBinaryInputStream.hpp  KVBinaryOutputStream.cpp  KVBinaryOutputStream.hpp
tests/: Io.h  Random.hpp  io.hpp
tests/blockchain/: test_blockchain.cpp  test_blockchain.hpp
tests/crypto/: benchmarks.cpp  benchmarks.hpp  test_check_key.txt  test_check_ring_signature.txt  test_check_ring_signature_amethyst.txt  test_check_scalar.txt  test_check_signature.txt  test_claim_outputs_am_linkable.txt  test_claim_outputs_am_unlinkable.txt  test_claim_outputs_cryptonote.txt  test_crypto.cpp  test_crypto.hpp  test_derive_output_address_am_linkable.txt  test_derive_output_address_am_unlinkable.txt  test_derive_public_key.txt  test_derive_secret_key.txt  test_elligator.txt  test_generate_key_derivation.txt  test_generate_key_image.txt  test_generate_keys.txt  test_generate_outputs_am_linkable.txt  test_generate_outputs_am_unlinkable.txt  test_generate_outputs_cryptonote.txt  test_generate_ring_signature.txt  test_generate_ring_signature_amethyst.txt  test_generate_ring_signature_amethyst_big.txt  test_generate_ring_signature_big.txt  test_generate_signature.txt  test_hash_to_scalar.txt  test_hash_to_subgroup.txt  test_random_keypair.txt  test_random_scalar.txt  test_secret_key_to_public_key.txt  test_underive_public_key.txt
tests/hash/: test_hash.cpp  test_hash.hpp
tests/json/: fail18.json  fail34.json  readme.txt  test_json.cpp  test_json.hpp
tests/scratchpad/: readme.txt
tests/txloop/: txloop.go
tests/wallet_file/: test02.wallet  test03.wallet  test04.wallet  test05.wallet  test05v.wallet  test06.wallet  test06v.wallet  test_wallet_file.cpp  test_wallet_file.hpp
tests/wallet_state/: test_wallet_state.cpp  test_wallet_state.hpp
в src/основных/: Currency.cpp
(+100 files in other folders)
